GNOME Bugzilla – Bug 751465
dashdemux: incorrect use of period start
Last modified: 2015-08-16 13:37:08 UTC
The period start information, calculated in gst_mpd_client_setup_media_presentation function is stored in stream_period->start. The information read from xml file and stored in stream_period->period->start is not changed. If the xml file does not contain the period start information, stream_period->period->start will be -1. The function gst_mpd_client_get_next_segment_availability_end_time wants to use period start time, but incorrectly uses stream_period->period->start (value from xml file, which could be -1) instead of stream_period->start (computed value)
Created attachment 306053 [details] [review] proposed patch
commit 93f08347de7b725f568b74e972c7d4a59773bb6f Author: Florin Apostol <florin.apostol@oregan.net> Date: Wed Jun 24 21:42:32 2015 +0100 dashdemux: incorrect use of period start The period start information, calculated in gst_mpd_client_setup_media_presentation function is stored in stream_period->start. The information read from xml file and stored in stream_period->period->start is not changed. If the xml file does not contain the period start information, stream_period->period->start will be -1. The function gst_mpd_client_get_next_segment_availability_end_time wants to use period start time, but incorrectly uses stream_period->period->start (value from xml file, which could be -1) instead of stream_period->start (computed value) https://bugzilla.gnome.org/show_bug.cgi?id=751465